--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">PizzaSearchAssignment</string>
     <string name="action_settings">Settings</string>
+    <string name="search">Поиск</string>
+    <string name="emulate_NY">Emulate NY</string>
 </resources>
