--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="action_settings">Settings</string>
     <string name="search">Поиск</string>
     <string name="emulate_NY">Emulate NY</string>
+    <string name="title_activity_search_result">SearchResultActivity</string>
 </resources>
