--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="search">Поиск</string>
     <string name="emulate_NY">Emulate NY</string>
     <string name="title_activity_search_result">SearchResultActivity</string>
+    <string name="distance">Расстояние: %s м.</string>
 </resources>
