venue detail showing

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="title_activity_search_result">SearchResultActivity</string>
     <string name="distance">Расстояние: %s м.</string>
     <string name="title_activity_venue_detail">VenueDetailActivity</string>
+    <string name="address_title">Адрес:</string>
 </resources>
