GPSDealer fixes, NY location emulating

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,6 @@
     <string name="distance">Расстояние: %s м.</string>
     <string name="title_activity_venue_detail">VenueDetailActivity</string>
     <string name="address_title">Адрес:</string>
+    <string name="error">Ошибка</string>
+    <string name="no_location">Неизвестная локация</string>
 </resources>
