--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,12 +1,13 @@
 <resources>
     <string name="app_name">PizzaSearchAssignment</string>
+    <string name="title_activity_search_result">SearchResultActivity</string>
+    <string name="title_activity_venue_detail">VenueDetailActivity</string>
     <string name="action_settings">Settings</string>
     <string name="search">Поиск</string>
     <string name="emulate_NY">Emulate NY</string>
-    <string name="title_activity_search_result">SearchResultActivity</string>
     <string name="distance">Расстояние: %s м.</string>
-    <string name="title_activity_venue_detail">VenueDetailActivity</string>
     <string name="address_title">Адрес:</string>
     <string name="error">Ошибка</string>
     <string name="no_location">Неизвестная локация</string>
+    <string name="loaded_from_cache">Загружено из кэша</string>
 </resources>
